--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 --- #YAML:1.0
 name: Regexp-Genex
-version: 0.05
+version: 0.06
 author:
   - Brad Bowman, E<lt>genex@bowman.bsE<gt>
 abstract: get the strings a regex will match, with a regex
 license: perl
 requires:
+  String::Escape: 2002.001
   YAPE::Regex: 3.01
 provides: {}
 generated_by: Module::Build version 0.25
